--- a/plugins.config
+++ b/plugins.config
@@ -1,9 +1,9 @@
-Plugins>RandomJ, "RandomJ Binomial", RJ_Binomial
-Plugins>RandomJ, "RandomJ Exponential", RJ_Exponential
-Plugins>RandomJ, "RandomJ Gamma", RJ_Gamma
-Plugins>RandomJ, "RandomJ Gaussian", RJ_Gaussian
-Plugins>RandomJ, "RandomJ Options", RJ_Options
-Plugins>RandomJ, "RandomJ Panel", RJ_Panel
-Plugins>RandomJ, "RandomJ Poisson", RJ_Poisson
-Plugins>RandomJ, "RandomJ Uniform", RJ_Uniform
+Process>Noise>RandomJ, "RandomJ Binomial", RJ_Binomial
+Process>Noise>RandomJ, "RandomJ Exponential", RJ_Exponential
+Process>Noise>RandomJ, "RandomJ Gamma", RJ_Gamma
+Process>Noise>RandomJ, "RandomJ Gaussian", RJ_Gaussian
+Process>Noise>RandomJ, "RandomJ Options", RJ_Options
+Process>Noise>RandomJ, "RandomJ Panel", RJ_Panel
+Process>Noise>RandomJ, "RandomJ Poisson", RJ_Poisson
+Process>Noise>RandomJ, "RandomJ Uniform", RJ_Uniform
 Help>About Plugins, "RandomJ...", RJ_Website
