--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	</parent>
 
 	<artifactId>RandomJ_</artifactId>
-	<version>1.5.0</version>
+	<version>1.5.1-SNAPSHOT</version>
 
 	<name>plugins/RandomJ_.jar</name>
 	<description></description>
