Add missing CI information

--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,11 @@
 		</dependency>
 	</dependencies>
 
+	<ciManagement>
+		<system>Jenkins</system>
+		<url>http://jenkins.imagej.net/job/RandomJ/</url>
+	</ciManagement>
+
 	<scm>
 		<connection>scm:git:git://github.com/fiji/RandomJ</connection>
 		<developerConnection>scm:git:git@github.com:fiji/RandomJ</developerConnection>
