--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
-		http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0   http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
@@ -13,7 +10,7 @@
 	</parent>
 
 	<artifactId>RandomJ_</artifactId>
-	<version>1.5.2-SNAPSHOT</version>
+	<version>1.5.2</version>
 
 	<name>plugins/RandomJ_.jar</name>
 	<description />
@@ -21,7 +18,7 @@
 	<scm>
 		<connection>scm:git:git://github.com/fiji/RandomJ</connection>
 		<developerConnection>scm:git:git@github.com:fiji/RandomJ</developerConnection>
-		<tag>HEAD</tag>
+		<tag>RandomJ_-1.5.2</tag>
 		<url>https://github.com/fiji/RandomJ</url>
 	</scm>
 	<ciManagement>
