--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 
 	<artifactId>RandomJ_</artifactId>
-	<version>1.5.3-SNAPSHOT</version>
+	<version>2.0.0</version>
 
 	<name>plugins/RandomJ_.jar</name>
 	<description />
