--- a/src/main/resources/plugins.config
+++ b/src/main/resources/plugins.config
@@ -1,9 +1,9 @@
-Process>Noise>RandomJ, "RandomJ Binomial", RJ_Binomial
-Process>Noise>RandomJ, "RandomJ Exponential", RJ_Exponential
-Process>Noise>RandomJ, "RandomJ Gamma", RJ_Gamma
-Process>Noise>RandomJ, "RandomJ Gaussian", RJ_Gaussian
-Process>Noise>RandomJ, "RandomJ Options", RJ_Options
-Process>Noise>RandomJ, "RandomJ Panel", RJ_Panel
-Process>Noise>RandomJ, "RandomJ Poisson", RJ_Poisson
-Process>Noise>RandomJ, "RandomJ Uniform", RJ_Uniform
-Help>About Plugins, "RandomJ...", RJ_Website
+Process>Noise>RandomJ, "RandomJ Binomial", randomj.RJ_Binomial
+Process>Noise>RandomJ, "RandomJ Exponential", randomj.RJ_Exponential
+Process>Noise>RandomJ, "RandomJ Gamma", randomj.RJ_Gamma
+Process>Noise>RandomJ, "RandomJ Gaussian", randomj.RJ_Gaussian
+Process>Noise>RandomJ, "RandomJ Options", randomj.RJ_Options
+Process>Noise>RandomJ, "RandomJ Panel", randomj.RJ_Panel
+Process>Noise>RandomJ, "RandomJ Poisson", randomj.RJ_Poisson
+Process>Noise>RandomJ, "RandomJ Uniform", randomj.RJ_Uniform
+Help>About Plugins, "RandomJ...", randomj.RJ_Help
