--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,10 @@
 		<tag>HEAD</tag>
 		<url>https://github.com/fiji/RandomJ</url>
 	</scm>
+	<issueManagement>
+		<system>GitHub Issues</system>
+		<url>https://github.com/fiji/RandomJ/issues</url>
+	</issueManagement>
 	<ciManagement>
 		<system>Jenkins</system>
 		<url>http://jenkins.imagej.net/job/RandomJ/</url>
